@@ -1,3 +1,9 @@
+Sun Aug 10 13:57:10 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
+
+	* src/QGaimBListWindow.cpp:
+	* src/QGaimBListWindow.h:
+	  - Moved Show Offline Buddies into a settings/display menu.
+
 Sun Aug 10 01:35:06 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
 
 	* src/QGaimConvWindow.cpp:
